--- a/sfdx-mdapi/force-app/main/default/classes/controllers/MetadataRetrieveController.cls
+++ b/sfdx-mdapi/force-app/main/default/classes/controllers/MetadataRetrieveController.cls
@@ -30,7 +30,7 @@
 public with sharing class MetadataRetrieveController 
 {
 	private static final Integer METADATA_API_VERSION = 
-		Integer.valueOf(new MetadataPort().endpoint_x.substringAfterLast('/'));
+		Integer.valueOf(new MetadataAPI().endpoint_x.substringAfterLast('/'));
 
 	public List<SelectOption> MetaDataTypes {get; set;}
 	public String MetaDataType {get; set;}		
@@ -47,7 +47,7 @@ public with sharing class MetadataRetrieveController
 	public PageReference init()
 	{
 		// List available Metadata Types via the 'describeMetadata' API call
-		MetadataPort service = MetadataPort.createService();					
+		MetadataAPI service = MetadataAPI.getInstance();					
 		MetadataService.DescribeMetadataResult describeResult = service.describeMetadata(METADATA_API_VERSION);
 		List<String> metadataTypeNames = new List<String>();
 		for(MetadataService.DescribeMetadataObject metadataObject : describeResult.metadataObjects)
@@ -77,7 +77,7 @@ public with sharing class MetadataRetrieveController
 	{
 		// List Metadata items for the selected Metadata Type
 		MetaDataItems = new List<SelectOption>();		
-		MetadataPort service = MetadataPort.createService();
+		MetadataAPI service = MetadataAPI.getInstance();
 		List<MetadataService.ListMetadataQuery> queries = new List<MetadataService.ListMetadataQuery>();		
 		MetadataService.ListMetadataQuery queryLayout = new MetadataService.ListMetadataQuery();
 		if(MetaDataFolder!=null && MetaDataFolder.length()>0)
@@ -109,7 +109,7 @@ public with sharing class MetadataRetrieveController
 		MetadataFiles = null;
 		 
 		// Construct unmanaged package with list of desired components to retrieve in zip
-		MetadataPort service = MetadataPort.createService();				
+		MetadataAPI service = MetadataAPI.getInstance();				
 		MetadataService.RetrieveRequest retrieveRequest = new MetadataService.RetrieveRequest();
 		retrieveRequest.apiVersion = METADATA_API_VERSION;
 		retrieveRequest.packageNames = null;
@@ -129,7 +129,7 @@ public with sharing class MetadataRetrieveController
 	public PageReference checkAsyncRequest()
 	{
 		// Check the status of the retrieve request
-		MetadataPort service = MetadataPort.createService();
+		MetadataAPI service = MetadataAPI.getInstance();
 		MetadataService.RetrieveResult retrieveResult = service.checkRetrieveStatus(AsyncResult.Id, true);
 		if(retrieveResult.done)
 		{
