--- a/apex-mdapi/src/classes/MetadataDataController.cls
+++ b/apex-mdapi/src/classes/MetadataDataController.cls
@@ -1,7 +1,7 @@
 /**
  * Copyright (c) 2012, FinancialForce.com, inc
  * All rights reserved.
- *
+ * Testing
  * Redistribution and use in source and binary forms, with or without modification, 
  *   are permitted provided that the following conditions are met:
  *
